--- a/src/vr/dialogs.css
+++ b/src/vr/dialogs.css
@@ -5,6 +5,7 @@
     right:0;
     bottom:0;
     background-color: rgba(100,100,100,0.5);
+    z-index: 10;
 }
 .dialog-scrim .dialog-body {
     width: 80vw;
